# libxml2

./: .gitignore  Makefile.am  dict.c  error.c  nanoftp.c  runtest.c  testSAX.c  testlimits.c  testrecurse.c  variadic.c  variadic.h  xmllint.c  xmllint_variadic.c  xmllint_variadic.h  xmlreader.c  xmlwriter.c
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
xchecks/: cc_wrapper.sh  libxml2_c.yaml  libxml2_rust.yaml  mvee_libxml2.ini  xchecks.c
xchecks/lib/: liblzma.so.5
