[package]
name = "libxml2-rs"
version = "0.1.0"

[features]
xchecks = ["cross-check-plugin", "cross-check-derive", "cross-check-runtime"]

[dependencies.cross-check-plugin]
path = "../../../../cross-checks/rust-checks/rustc-plugin"
optional = true

[dependencies.cross-check-derive]
path = "../../../../cross-checks/rust-checks/derive-macros"
optional = true

[dependencies.cross-check-runtime]
path = "../../../../cross-checks/rust-checks/runtime"
features = ["libc-hash", "fixed-length-array-hash"]
optional = true

[build-dependencies]
cc = "1.0"
